= Changelog

== 0.7.5-dev - unreleased

* internes Refactoring bei Funktionen für unterstützte Kartenterminals

== 0.7.4 - 2025-03-14

* HOTFIX: Problem beim Reinitialisieren von Tabellen behoben.

== 0.7.3 - 2025-03-14

* Übersicht Kartenterminals: Performance bei großer Anzahl von Terminals 
  verbessert (umgestellt auf server side processing)

== 0.7.2 - 2025-03-08

* Update des Ruhebildschirms (Anzeige im Display) für ORGA 6141 online Terminals
* Rebootmöglichkeit von ORGA 6141 online Terminals.
* Hinweis bei fehlendem Kontext für Konnektor und Karte.

== 0.7.0 - 2025-02-22

=== BREAKING CHANGES

* Änderung des Modells für die Zuordnung von Karten zu Kartenterminals. Jeder Slot kann jetzt nur noch genau eine Karte zugeordnet haben. Beim Wechsel einer Karte wie SMC-KT wird die neue (von Cocard gefundene) Karte dem Slot zugeordnet, die bisherige Karte entfernt und erhält den Status NOTHING. Damit ist sichergestellt, dass die SMC-KT, die beim Kartenterminal angezeigt wird, immer die aktuelle Karte ist und jeder Slot nur eine zugeordnete Karte haben kann (bisher: ein Kartenterminal konnte mehrere Karten pro Slot zugeordnet haben).

== 0.6.5 - 2025-02-08

* Fix: update von last_ok korrigiert, war bisher vor allem beim Konnektor nicht immer korrekt
* Update diverser Abhängigkeiten


== 0.6.4 - 2025-02-01

* SMC-B und SMC-KT übernehmen den Ort vom Kartenterminal beim Speichern
* Liste aller Kartenterminals mit SMC-B
* Gesamtübersicht über alle Notizen
* Anzeige der aktuellsten Notizen im Dashboard
* Anzeige SMC-KT ICCSN und Gültigkeit beim Kartenterminal und in der Übersicht der Kartenterminals
* Ändert sich die IP des Kartenterminals, muss diese manuell übernommen werden. Die einmal eingestellte IP bleibt bis zur manuellen Übernahme erhalten, auch dann, wenn das Kartenterminal wegen eines Problems seine IP verliert.
* Dokumentation für Kartenterminals ergänzt

== 0.6.3 - 2025-01-17
* Workflow für die PIN-Verifizierung aller Karten eines Terminals verbessert.