@@ -2,6 +2,7 @@
   <%= turbo_frame_tag("notes", src: polymorphic_path([@notable, :notes], active: 1),
                                refresh: "morph") %>
 <% end %>
+
 <%= turbo_stream.replace('side_notes') do %>
   <%= turbo_frame_tag("side_notes", src: sindex_notes_path, refresh: "morph") %>
 <% end %>
