@@ -1,5 +1,4 @@
 <%= turbo_stream_from @connector %>
-<%= turbo_frame_tag @connector, refresh: :morph do %>
 <div class="card mb-3" id="<%= dom_id(@connector) %>">
   <div class="card-header">
     <div class="d-flex w-100">
@@ -227,7 +226,6 @@
     </div>
   </div>
 </div>
-<% end %>
 
 <%= back_link %>
 <%= new_link Connector %>
