@@ -217,6 +217,18 @@
 <li>
 <p>internes Refactoring bei Funktionen für unterstützte Kartenterminals</p>
 </li>
+<li>
+<p>Fix: Aktualisierung der Notizen im Dashboard bei Änderungen</p>
+</li>
+<li>
+<p>Fix: Update der Anzeige bei Aktualisierung des TI-Lagebildes durch den Hintergrundjob</p>
+</li>
+<li>
+<p>Link und Edit-Button bei Notizen im Dashboard (Edit nur bei Owner)</p>
+</li>
+<li>
+<p>kleinere Bugfixes</p>
+</li>
 </ul>
 </div>
 </div>
