@@ -23,13 +23,13 @@ RSpec.describe AcknowledgeButtonComponent, type: :component do
       it "shows ack button" do
         render_inline(described_class.new(notable: log, readonly: false))
         expect(page).to have_css('a[class="btn btn-sm btn-warning"]')
-        expect(page).to have_css(%Q[a[href="#{new_log_note_path(log, type: Note.types[:acknowledge])}"]])
+        expect(page).to have_css(%Q[a[href="#{new_log_note_path(log, type: :acknowledge)}"]])
       end
 
       it "readonly - does not show ack button" do
         render_inline(described_class.new(notable: log))
         expect(page).not_to have_css('a[class="btn btn-sm btn-warning"]')
-        expect(page).not_to have_css(%Q[a[href="#{new_log_note_path(log, type: Note.types[:acknowledge])}"]])
+        expect(page).not_to have_css(%Q[a[href="#{new_log_note_path(log, type: :acknowledge)}"]])
       end
     end
   end
@@ -56,7 +56,7 @@ RSpec.describe AcknowledgeButtonComponent, type: :component do
         it "shows ack button" do
           render_inline(described_class.new(notable: connector, readonly: false))
           expect(page).to have_css('a[class="btn btn-sm btn-warning"]')
-          expect(page).to have_css(%Q[a[href="#{new_connector_note_path(connector, type: Note.types[:acknowledge])}"]])
+          expect(page).to have_css(%Q[a[href="#{new_connector_note_path(connector, type: :acknowledge)}"]])
         end
       end
 
@@ -68,14 +68,14 @@ RSpec.describe AcknowledgeButtonComponent, type: :component do
         it "does not shows ack button" do
           render_inline(described_class.new(notable: connector, readonly: false))
           expect(page).not_to have_css('a[class="btn btn-sm btn-warning"]')
-          expect(page).not_to have_css(%Q[a[href="#{new_connector_note_path(connector, type: Note.types[:acknowledge])}"]])
+          expect(page).not_to have_css(%Q[a[href="#{new_connector_note_path(connector, type: :acknowledge)}"]])
         end
       end
 
       it "readonly - does not show ack button" do
         render_inline(described_class.new(notable: connector))
         expect(page).not_to have_css('a[class="btn btn-sm btn-warning"]')
-        expect(page).not_to have_css(%Q[a[href="#{new_connector_note_path(connector, type: Note.types[:acknowledge])}"]])
+        expect(page).not_to have_css(%Q[a[href="#{new_connector_note_path(connector, type: :acknowledge)}"]])
       end
     end
   end
